hphp/hack/test/typecheck/class_refinements/type-const-bad.php.exp
ERROR: File "type-const-bad.php", line 8, characters 21-45:
Type refinements cannot appear on the right-hand side of a type constant. (NastCheck[3101])
ERROR: File "type-const-bad.php", line 10, characters 33-57:
Type refinements cannot appear on the right-hand side of a type constant. (NastCheck[3101])
ERROR: File "type-const-bad.php", line 13, characters 17-41:
Type refinements cannot appear on the right-hand side of a type constant. (NastCheck[3101])
